# Sokol.NET

./: .gitattributes  .gitignore  .gitmodules  ANDROID_DEVICE_SELECTION.md  ANDROID_PROPERTIES.md  ANDROID_SCREEN_ORIENTATION.md  APP_ICON.md  Android.Build.targets  BUILD_SYSTEM.md  Directory.Build.props  GITHUB_PAGES_SETUP.md  ICON_IMPLEMENTATION_SUMMARY.md  IOS_PROPERTIES.md  MULTI_DEVICE_INSTALL.md  OUTPUT_PATH_IMPLEMENTATION.md  PACKAGE_PREFIX_CONFIGURATION.md  PROJECT_TEMPLATE.md  README.md  SHADER_GUIDE.md  SOKOL_APPLICATION_BUILDER.md  Sokol.NET.sln  VSCODE_RUN_GUIDE.md  WEBASSEMBLY_BROWSER_GUIDE.md  WebAssembly-Struct-Return-Workaround.md  examples-data.json  iOS.Build.targets  index.html  ios-device-selection.md  register.bat  register.sh  sokol-charp.sln  web-server-setup.md
.github/workflows/: build-libraries.yml  build-sokol-tools.yml
bindgen/: gen.py  gen_csharp.py  gen_ir.py
bindgen/c/: cgltf.c  fontstash.c  ozzutil.c  sokol_app.c  sokol_audio.c  sokol_basisu.c  sokol_debugtext.c  sokol_fetch.c  sokol_fontstash.c  sokol_gfx.c  sokol_gfx_imgui.c  sokol_gl.c  sokol_glue.c  sokol_gp.c  sokol_imgui.c  sokol_log.c  sokol_shape.c  sokol_spine.c  sokol_time.c  stb_image.c  tinyexr.c
css/: showcase.css
docs/: AAB_BUILD_GUIDE.md  ANDROID_KEYBOARD_IMPLEMENTATION.md  ANDROID_PROPERTIES.md  ANDROID_SCREEN_ORIENTATION.md  APP_VERSION_CONFIGURATION.md  BUILD_SYSTEM.md  Browser-Cache-Issues.md  C-Internal-Wrappers-Auto-Generation.md  CREATE_EXAMPLE.md  CREATE_PROJECT.md  DESKTOP_WEB_ICONS.md  ICON_QUICKSTART.md  IOS_PROPERTIES.md  QUICK_BUILD.md  README.md  SHADER_GUIDE.md  ios-device-selection.md  web-server-setup.md
examples/GltfViewer/: GltfViewerweb.runtimeconfig.json
examples/assimp_animation/: assimp_animationWeb.csproj  assimp_animationweb.runtimeconfig.json
examples/assimp_scene/: Directory.Build.props  README_iOS.md  assimp_sceneweb.runtimeconfig.json
examples/assimp_simple/: assimp_simple.csproj  assimp_simpleweb.runtimeconfig.json
examples/basisu/: basisuweb.runtimeconfig.json
examples/bepuphysics/: Directory.Build.props  README.md  bepuphysics.csproj  bepuphysicsWeb.csproj
examples/cgltf/: cgltfweb.runtimeconfig.json
examples/cgltf_scene/: ANIMATION_SUPPORT.md  Directory.Build.props  PBR_SHADER_FIXES.md  TODO_ANIMATION.md  cgltf_scene.csproj
examples/cimgui/: Directory.Build.props  cimgui.csproj  cimguiweb.csproj  cimguiweb.runtimeconfig.json
examples/cimgui/scripts/: CMakeLists.txt  android-build.ps1  android-build.sh  main.m
examples/clear/: clearweb.runtimeconfig.json
examples/cube/: Directory.Build.props  Program.cs  cube.csproj  cubes-app.cs  cubeweb.csproj  cubeweb.runtimeconfig.json
examples/cube-Web/: Program.cs  SokolCubeWebTest.csproj  build-web-debug.sh  build-web-release.sh  build-web-sokol-debug.sh  build-web-sokol-release.sh  cubes-app.cs  rd.xml
examples/cube/Android/native-activity/app/src/main/cpp/: CMakeLists.txt  cgltf.h  pl_mpeg.h  sokol_android_main.c  sokol_app.h  sokol_fetch.h  sokol_gp.h
examples/cube/scripts/: CMakeLists.txt  Info.plist  build-android-apk.sh  build-xcode-ios.sh  publish-android.sh
examples/cube/scripts/Android/native-activity/app/: build.gradle
examples/cube/scripts/Android/native-activity/app/src/main/: AndroidManifest.xml
examples/cubemap_jpeg/: Directory.Build.props  cubemap_jpegweb.runtimeconfig.json
examples/cubemaprt/: cubemaprtweb.runtimeconfig.json
examples/dyntex/: Android.Build.targets  (+6 more)
ext/: CMakeLists.txt  sokol.c  sokol_csharp_internal_wrappers.h  tinyexr_wrapper.cpp
ext/assimp/libs/ios/release/assimp.framework/: Info.plist  assimp
ext/assimp/libs/macos/arm64/release/: libassimp.dylib
ext/assimp/scripts/: build-all.sh  build-assimp-android-all.sh  build-assimp-android.sh  build-assimp-ios.sh  build-assimp-linux.sh  build-assimp-macos.sh  build-assimp-web.sh  build-assimp-windows.ps1
ext/basisu/: basisu_transcoder.cpp  sokol_basisu.h
ext/dcimgui/src/: cimgui.cpp
ext/fontstash/: stb_truetype.h
ext/ozzutil/: CMakeLists.txt  Info.plist  ozzutil.c  ozzutil.cc  ozzutil.h  ozzutil_csharp_internal_wrappers.h
ext/ozzutil/libs/ios/release/ozzutil.framework/: Info.plist  ozzutil
ext/ozzutil/libs/macos/arm64/release/: libozzutil.dylib
ext/sokol_gp/: sokol_gp.h
ext/spine-c/: CMakeLists.txt  Info.plist  sokol_spine_extension.c  spine_c_csharp_internal_wrappers.h
ext/spine-c/libs/ios/release/spine-c.framework/: Info.plist  spine-c
ext/spine-c/libs/macos/arm64/release/: libspine-c.dylib
ext/spine-c/scripts/: build-all.sh  build-spine-c-android-all.sh  build-spine-c-android.sh  build-spine-c-ios.sh  build-spine-c-linux.sh  build-spine-c-macos.sh  build-spine-c-web.sh  build-spine-c-windows.ps1
ext/util/: fileutil_osx.m
js/: showcase.js
scripts/: README-OZZUTIL-BUILD.md  README-TEMPLATES.md  README.md  add-project-to-vscode-config.ps1  add-project-to-vscode-config.py  add-project-to-vscode-config.sh  android_clang.cmd  android_llvm-objcopy.cmd  build-all-web-examples.sh  build-android-libraries.sh  build-android-sokol-libraries-via-apk.sh  build-android-sokol-libraries.sh  build-ios-sokol-library.sh  build-linux-library.sh  build-ozz-animation-all.sh  build-ozz-animation-android-all.sh  build-ozz-animation-android.sh  build-ozz-animation-ios-all.sh  build-ozz-animation-ios.sh  build-ozz-animation-linux.sh  build-ozz-animation-macos.sh  build-ozz-animation-web.sh  build-ozz-animation-windows.ps1  build-ozzutil-all.sh  build-ozzutil-android-all.sh  build-ozzutil-android.sh  build-ozzutil-ios-all.sh  build-ozzutil-ios.sh  build-ozzutil-linux.sh  build-ozzutil-macos.sh  build-ozzutil-web.sh  build-ozzutil-windows.ps1  build-spine-c-macos.sh  build-vs2022-windows.ps1  build-web-library-dotnet.sh  build-web-library-system.sh  build-web-library.ps1  build-web-library.sh  build-xcode-ios.sh  build-xcode-macos.sh  (+26 more)
thumbnails/: README.md
tools/: build-sokol-tool.sh
tools/SokolApplicationBuilder/templates/Android/native-activity/app/src/main/cpp/: CMakeLists.txt  sokol_android_main.c
tools/SokolApplicationBuilder/templates/ios/: CMakeLists.txt  Info.plist.in
(+741 files in other folders)
